# templates-cli

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  build-with-args-github.sh  build-with-args.sh  catalog-info.yaml  cli3.py  devenv.nix  flake.nix  mkdocs.yml  pyproject.toml  result  script.py  templates.json  templates.yaml  variables.nix
.github/ISSUE_TEMPLATE/: bug_report.md  nova-funcionalidade.md  reportar-bug.md
cli/: cli.py  devenv.nix  pyproject.toml
cli/utils/: ui.py
cli/utils/template/: __init__.py  abs.py  cookiecutter.py  nix_template.py
docs/: CREATING_TEMPLATES.md  DEVELOPMENT.md  index.md
py/: .gitignore  cli.nix  cli.py  devenv.nix  pyproject.toml
py/utils/: cookiecuter.py  nix.py  templates.py  ui.py
py/utils/template/: __init__.py  abs.py  cookiecutter.py  nix.py  nix_template.py
scripts/: build-with-args.sh  foo.sh
src/cli/: cli.py
src/cli/utils/: telemetry.py  ui.py
src/cli2/: main.py
src/cli2/templates/: abs.py  cookiecutter.py  factory.py  git_repo.py
src/cli2/utils/: telemetry.py
templates/batch/: 1.patch  config.yaml  default.nix  projectname.patch  variables.nix
templates/batch-cookie/: default.nix
templates/buora/: config.yaml  default.nix  variables.nix
templates/color-schemes/: default.nix  deleteBase24.patch  exemple.patch
templates/poc/: config.yaml  default.nix  teste.patch  variables.nix
uiv2/: README.md  bun.lockb  default.nix  package.json  teste.ts
uiv2/pages/: home.ts  render.ts  template-form.ts
uiv2/src/: index.ts  server.ts  types.d.ts
uiv2/src/pages/: index.ts
(+4 files in other folders)
