[project]
name = "cli-a3-templates"
version = "0.1.0"
description = "A CLI tool for generating templates"
authors = [
    {name = "André Brandão",email = "andre.brandao@a3data.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all] (>=0.15.3,<0.16.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "cookiecutter (>=2.6.0,<3.0.0)"
]

[tool.poetry.scripts]
a3t = "cli.cli:app"

[tool.poetry.packages]
include = ["src/cli"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
